# epn-solutions

./: .gitignore  BACKEND_STATUS.txt  BACKEND_TEST_ISSUES.md  CURRENT_STATUS.md  CURRENT_STATUS.txt  FRONTEND_TEST_REPORT.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_COMPLETE.md  LICENSE  MODELS_TEMPLATE.md  PHASE2_WEBSOCKET_COMPLETE.md  PHASE4_CLIENT_COMPLETE.md  PROGRESS_UPDATE.md  PROJECT_ROADMAP.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  RUST_CLIENT_POC.md  SESSION3_SUMMARY.md  SESSION4_SUMMARY.md  SESSION4_SUMMARY_FINAL.md  SUCCESS_INTEGRATION_TESTS.md  SUMMARY.txt  TESTS_INTEGRATION_STATUS.md  WINDOWS_SUPPORT_COMPLETE.md  create_dirs.sh  quick-start.sh
ansible/: ansible.cfg
ansible/inventory/: hosts.yml.example
ansible/inventory/group_vars/: all.yml.example
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/dnsmasq/handlers/: main.yml
ansible/roles/dnsmasq/tasks/: main.yml
ansible/roles/dnsmasq/templates/: dnsmasq.conf.j2  pxelinux-default.j2
ansible/roles/docker/handlers/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/docker/templates/: daemon.json.j2
ansible/roles/network/handlers/: main.yml
ansible/roles/network/tasks/: main.yml
ansible/roles/network/templates/: hosts.j2  netplan.yaml.j2
backend/: .env.example  Dockerfile  README.md  conftest.py  create_test_data.py  pytest.ini
backend/apps/: __init__.py
backend/apps/auth/: __init__.py  urls.py
backend/apps/core/: consumers.py  models.py  permissions.py
backend/apps/logs/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/logs/migrations/: 0001_initial.py  0002_alter_log_session.py
backend/apps/postes/: __init__.py  admin.py  apps.py  certificate_manager.py  consumers.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/postes/migrations/: 0001_initial.py  0002_add_certificate_fields.py  0003_add_discovery_fields.py  0004_add_type_poste_field.py
backend/apps/sessions/: __init__.py  admin.py  apps.py  consumers.py  extension_urls.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py  websocket_utils.py
backend/apps/sessions/migrations/: 0001_initial.py  0002_extensionrequest.py
backend/apps/utilisateurs/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/utilisateurs/migrations/: 0001_initial.py  0002_add_is_guest_field.py
backend/config/: __init__.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  test.py
backend/requirements/: base.txt  development.txt  production.txt
backend/scripts/: create_superuser.py
backend/tests/: conftest.py  factories.py
backend/tests/test_core/: test_permissions.py
backend/tests/test_postes/: test_models.py  test_views.py
backend/tests/test_sessions/: test_models.py  test_views.py
backend/tests/test_utilisateurs/: test_models.py  test_views.py
client/: README.md  config.py  install_linux.sh  poste_client.py  requirements.txt  session_manager.py
client/systemd/: poste-client.service
client/windows/: README_WINDOWS.md  install.bat  install.ps1  poste_service.py
deployment/: .env.production.example
deployment/ansible/: config.yaml.j2  deploy-clients.yml  epn-client.service.j2  hosts.ini.example
deployment/nginx/: poste-public.conf
deployment/scripts/: deploy-server.sh  generate-ssl-cert.sh  install-client-python.sh  install-client.sh
deployment/systemd/: epn-client.service  poste-public-server.service
docker/: .env.dev.example  .env.example  .gitignore  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.simple.yml  docker-compose.yml
docker/certs/: .gitkeep
docker/nginx/: nginx.conf  simple.conf
docker/pihole/: custom.list
docker/postgres/: init.sql
docker/scripts/: generate-certificates.sh
docker/traefik/: traefik.yml
docker/traefik/dynamic/: middlewares.yml  routers.yml  tls.yml
docs/: DEPLOYMENT.md  ROADMAP-FEATURES.md  installation-client-linux.md  installation-client-windows.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: auth.spec.js  sessions.spec.js
frontend/e2e/fixtures/: auth.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/composables/: useToast.js  useWebSocket.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  dashboard.js
frontend/src/tests/: setup.js
frontend/src/utils/: logger.js
frontend/src/views/: DashboardView.vue  LoginView.vue  LogsView.vue  PostesView.vue  SessionsView.vue  UtilisateursView.vue
rust-client/: Cargo.toml  README.md  epn-config.example.yaml  epn-config.yaml
rust-client/autostart/: epn-client-loop.sh  epn-client.desktop  install-autostart.sh
rust-client/crates/epn-core/: Cargo.toml
rust-client/crates/epn-core/src/: certificate.rs  cleanup.rs  config.rs  gaming.rs  inactivity.rs  lib.rs  registration.rs  session.rs  types.rs  websocket.rs
rust-client/crates/epn-core/src/lockdown/: apps.rs  linux.rs  mod.rs  profiles.rs  windows.rs
rust-client/crates/epn-gui/: Cargo.toml  build.rs  tauri.conf.json
rust-client/crates/epn-gui-iced/: Cargo.toml
rust-client/crates/epn-gui-iced/src/: main.rs
rust-client/crates/epn-gui/capabilities/: default.json
rust-client/crates/epn-gui/src/: main.rs
rust-client/crates/epn-gui/ui/: app.js  index.html  styles.css
rust-client/crates/epn-service/: Cargo.toml
rust-client/crates/epn-service/src/: main.rs
rust-client/crates/epn-system/: Cargo.toml
rust-client/crates/epn-system/src/: lib.rs  logout.rs  notifications.rs  screen_lock.rs
rust-client/scripts/: configure-lockdown.ps1  configure-lockdown.sh  install-service.ps1  save-firefox-template.ps1  save-firefox-template.sh
rust-client/systemd/: epn-client.service  install-service.sh
scripts/: install-client.sh
(+11 files in other folders)
