[package]
name = "epn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
mac_address = { workspace = true }
local-ip-address = { workspace = true }
url = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
serde_yaml = { workspace = true }
