[package]
name = "epn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# TLS avec rustls
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

# HTTP client pour l'enregistrement
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
mac_address = { workspace = true }
local-ip-address = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
hostname = { workspace = true }
dirs = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
serde_yaml = { workspace = true }

# System actions (screen lock, logout, notifications)
epn-system = { path = "../epn-system" }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["user"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_Security"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
