[package]
name = "epn-gui-iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EPN Client GUI using Iced (POC)"

[[bin]]
name = "epn-client-iced"
path = "src/main.rs"

[dependencies]
# Core EPN
epn-core = { path = "../epn-core" }
epn-system = { path = "../epn-system" }

# Iced GUI
iced = { version = "0.13", features = ["tokio", "advanced"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = "0.4"
